test: 카드의 합이 일정 점수를 넘는지 판단하는 기능에 대한 테스트 생성